--- a/Pike_Portfolio/cover letter.html
+++ b/Pike_Portfolio/cover letter.html
@@ -67,7 +67,7 @@
 
         <hr/>
 
-        <p class="tiny muted">Contact: djpike25@outlook.com · (214) 991-2652 · Dallas, TX</p>
+        <p class="tiny muted">Contact: djpike25@outlook.com · Dallas, TX</p>
       </article>
     </div>
   </main>
@@ -80,4 +80,5 @@
 
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
+
 </html>
