--- a/Pike_Portfolio/index.html
+++ b/Pike_Portfolio/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <a class="brand" href="resume.html">
+      <a class="brand" href="index.html">
   <span class="brand-mark logo-glow" aria-hidden="true">
     <svg class="logo-glow" viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
       <defs>
@@ -30,7 +30,7 @@
 </a>
 
       <nav class="nav">
-        <a href="resume.html" aria-current="page">Resume</a>
+        <a href="index.html" aria-current="page">Resume</a>
         <a href="cover letter.html">Cover Letter</a>
         <a href="career goals.html">Career Goals</a>
       </nav>
@@ -181,3 +181,4 @@ glowTargets.forEach(el => {
   );
 });
 </script>
+
