--- a/cover letter.html
+++ b/cover letter.html
@@ -13,7 +13,7 @@
 <body>
   <header class="site-header">
     <div class="container header-inner">
-       <a class="brand" href="resume.html">
+       <a class="brand" href="index.html">
   <span class="brand-mark logo-glow" aria-hidden="true">
     <svg class="logo-glow" viewBox="0 0 48 48" width="28" height="28" xmlns="http://www.w3.org/2000/svg">
       <defs>
@@ -30,7 +30,7 @@
 </a>
 
       <nav class="nav">
-        <a href="resume.html">Resume</a>
+        <a href="index.html">Resume</a>
         <a href="cover letter.html" aria-current="page">Cover Letter</a>
         <a href="career goals.html">Career Goals</a>
       </nav>
@@ -80,4 +80,5 @@
 
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
+
 </html>
