--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </ul>
         </div>
         <figure class="hero-media">
-          <img src="images/profilepic.jpg" alt="Professional headshot of Daniel Pike" >
+          <img src="profilepic.jpg" alt="Professional headshot of Daniel Pike" >
          <!-- <figcaption class="tiny muted">Headshot</figcaption> -->
         </figure>
       </div>
@@ -182,4 +182,5 @@ glowTargets.forEach(el => {
 });
 
 </script>
+
 
