--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
     <section class="section">
       <div class="container center">
-        <a href="media/Daniel Pike.pdf" download class="btn btn-primary glow-btn">
+        <a href="Daniel Pike.pdf" download class="btn btn-primary glow-btn">
       ⬇️ Download My Resume</a>
   </div>
 </section>
@@ -182,5 +182,6 @@ glowTargets.forEach(el => {
 });
 
 </script>
+
 
 
