--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <h2>Audio Introduction</h2>
           <p class="muted">Short welcome message about my background.</p>
           <audio controls preload="metadata">
-            <source src="media/sampleaudio.MP3" type="audio/mpeg" />
+            <source src="sampleaudio.MP3" type="audio/mpeg" />
             Your browser does not support the audio element.
           </audio>
         </article>
@@ -147,8 +147,8 @@
         <article class="card">
           <h2>Intro Video</h2>
           <p class="muted"></p>
-          <video controls preload="metadata" poster="images/headshot.jpg" style="width:100%; border-radius:12px">
-            <source src="media/video.mp4" type="video/mp4" />
+          <video controls preload="metadata" style="width:100%; border-radius:12px">
+            <source src="video.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </article>
@@ -182,6 +182,7 @@ glowTargets.forEach(el => {
 });
 
 </script>
+
 
 
 
