--- a/cover letter.html
+++ b/cover letter.html
@@ -67,7 +67,7 @@
 
         <hr/>
 
-        <p class="tiny muted">Contact: djpike25@outlook.com · (214) 991-2652 · Dallas, TX</p>
+        <p class="tiny muted">Contact: djpike25@outlook.com · Dallas, TX</p>
       </article>
     </div>
   </main>
@@ -82,4 +82,5 @@
 </body>
 
 </html>
+
 
